--- a/templates/vuejs-app/Jenkinsfile
+++ b/templates/vuejs-app/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
                   }
                     withSonarQubeEnv('fid-sonar') {
                       // This expands the evironment variables SONAR_CONFIG_NAME, SONAR_HOST_URL, SONAR_AUTH_TOKEN that can be used by any script.
-                      sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=$sonarProject -Dsonar.host.url=https://sonar.banking-sda.cb-demos.io -Dsonar.login=${env.SONAR_AUTH_TOKEN}"
+                      sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=$sonarProject -Dsonar.host.url=https://sonar.sda-c.cb-demos -Dsonar.login=${env.SONAR_AUTH_TOKEN}"
                     }
                 }    
               }
